--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
           target="_blank"
           rel="noreferrer"
         >
-          Participar da pesquisa de mercado
+          Participar da Pesquisa
         </a>
       </div>
 
